// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShareBar renders horizontally with icons and label 1`] = `
<DocumentFragment>
  .emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-1 {
  fill: #1877f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-1.emotion-1 {
  width: 48px;
  height: 48px;
}

.emotion-3 {
  fill: #1da1f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-3.emotion-3 {
  width: 48px;
  height: 48px;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-right: 16px;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<div
    class="emotion-6"
    orientation="horizontal"
  >
    <span
      class="emotion-0"
      orientation="horizontal"
    >
      Share
    </span>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="emotion-1"
          fill="currentColor"
          viewBox="0 0 1365.3333 1365.3333"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            transform="matrix(1.3333333,0,0,-1.3333333,0,1365.3333)"
          >
            <g
              transform="scale(0.1)"
            >
              <path
                d="m 10240,5120 c 0,2827.7 -2292.3,5120 -5120,5120 C 2292.3,10240 0,7947.7 0,5120 0,2564.46 1872.31,446.301 4320,62.1992 V 3640 H 3020 v 1480 h 1300 v 1128 c 0,1283.2 764.38,1992 1933.9,1992 560.17,0 1146.1,-100 1146.1,-100 V 6880 H 6754.38 C 6118.35,6880 5920,6485.33 5920,6080.43 V 5120 H 7340 L 7113,3640 H 5920 V 62.1992 C 8367.69,446.301 10240,2564.46 10240,5120"
                fill="#1877f2"
              />
              <path
                d="m 7113,3640 227,1480 H 5920 v 960.43 c 0,404.9 198.35,799.57 834.38,799.57 H 7400 v 1260 c 0,0 -585.93,100 -1146.1,100 C 5084.38,8240 4320,7531.2 4320,6248 V 5120 H 3020 V 3640 H 4320 V 62.1992 C 4580.67,21.3008 4847.84,0 5120,0 c 272.16,0 539.33,21.3008 800,62.1992 V 3640 h 1193"
                fill="#ffffff"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="emotion-3"
          fill="currentColor"
          viewBox="0 0 400 400"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <circle
              cx="200"
              cy="200"
              fill="#1DA1F2"
              r="200"
            />
          </g>
          <g>
            <path
              d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
              fill="#FFFFFF"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ShareBar renders horizontally with icons as links and label 1`] = `
<DocumentFragment>
  .emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-1 {
  fill: #1877f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-1.emotion-1 {
  width: 48px;
  height: 48px;
}

.emotion-5 {
  fill: #1da1f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-5.emotion-5 {
  width: 48px;
  height: 48px;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-right: 16px;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-3 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
}

.emotion-3 svg {
  fill: #0a68c1;
}

.emotion-3:hover:not(:disabled) {
  color: #02509b;
}

.emotion-3:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-3:active:not(:disabled) {
  color: #01396e;
}

.emotion-3:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-3:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-3:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-3 {
    vertical-align: text-bottom;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

<div
    class="emotion-10"
    orientation="horizontal"
  >
    <span
      class="emotion-0"
      orientation="horizontal"
    >
      Share
    </span>
    <div
      class="emotion-9"
    >
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          href="/"
        >
          <span
            class="emotion-2"
          >
            <svg
              aria-hidden="true"
              class="emotion-1"
              fill="currentColor"
              viewBox="0 0 1365.3333 1365.3333"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                transform="matrix(1.3333333,0,0,-1.3333333,0,1365.3333)"
              >
                <g
                  transform="scale(0.1)"
                >
                  <path
                    d="m 10240,5120 c 0,2827.7 -2292.3,5120 -5120,5120 C 2292.3,10240 0,7947.7 0,5120 0,2564.46 1872.31,446.301 4320,62.1992 V 3640 H 3020 v 1480 h 1300 v 1128 c 0,1283.2 764.38,1992 1933.9,1992 560.17,0 1146.1,-100 1146.1,-100 V 6880 H 6754.38 C 6118.35,6880 5920,6485.33 5920,6080.43 V 5120 H 7340 L 7113,3640 H 5920 V 62.1992 C 8367.69,446.301 10240,2564.46 10240,5120"
                    fill="#1877f2"
                  />
                  <path
                    d="m 7113,3640 227,1480 H 5920 v 960.43 c 0,404.9 198.35,799.57 834.38,799.57 H 7400 v 1260 c 0,0 -585.93,100 -1146.1,100 C 5084.38,8240 4320,7531.2 4320,6248 V 5120 H 3020 V 3640 H 4320 V 62.1992 C 4580.67,21.3008 4847.84,0 5120,0 c 272.16,0 539.33,21.3008 800,62.1992 V 3640 h 1193"
                    fill="#ffffff"
                  />
                </g>
              </g>
            </svg>
          </span>
        </a>
      </div>
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          href="/"
        >
          <span
            class="emotion-2"
          >
            <svg
              aria-hidden="true"
              class="emotion-5"
              fill="currentColor"
              viewBox="0 0 400 400"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <circle
                  cx="200"
                  cy="200"
                  fill="#1DA1F2"
                  r="200"
                />
              </g>
              <g>
                <path
                  d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
                  fill="#FFFFFF"
                />
              </g>
            </svg>
          </span>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ShareBar renders horizontally with twitter and facebook icons 1`] = `
<DocumentFragment>
  .emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-0 {
  fill: #1877f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-0.emotion-0 {
  width: 48px;
  height: 48px;
}

.emotion-2 {
  fill: #1da1f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-2.emotion-2 {
  width: 48px;
  height: 48px;
}

<div
    class="emotion-5"
    orientation="horizontal"
  >
    <div
      class="emotion-4"
    >
      <div
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          fill="currentColor"
          viewBox="0 0 1365.3333 1365.3333"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            transform="matrix(1.3333333,0,0,-1.3333333,0,1365.3333)"
          >
            <g
              transform="scale(0.1)"
            >
              <path
                d="m 10240,5120 c 0,2827.7 -2292.3,5120 -5120,5120 C 2292.3,10240 0,7947.7 0,5120 0,2564.46 1872.31,446.301 4320,62.1992 V 3640 H 3020 v 1480 h 1300 v 1128 c 0,1283.2 764.38,1992 1933.9,1992 560.17,0 1146.1,-100 1146.1,-100 V 6880 H 6754.38 C 6118.35,6880 5920,6485.33 5920,6080.43 V 5120 H 7340 L 7113,3640 H 5920 V 62.1992 C 8367.69,446.301 10240,2564.46 10240,5120"
                fill="#1877f2"
              />
              <path
                d="m 7113,3640 227,1480 H 5920 v 960.43 c 0,404.9 198.35,799.57 834.38,799.57 H 7400 v 1260 c 0,0 -585.93,100 -1146.1,100 C 5084.38,8240 4320,7531.2 4320,6248 V 5120 H 3020 V 3640 H 4320 V 62.1992 C 4580.67,21.3008 4847.84,0 5120,0 c 272.16,0 539.33,21.3008 800,62.1992 V 3640 h 1193"
                fill="#ffffff"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-2"
          fill="currentColor"
          viewBox="0 0 400 400"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <circle
              cx="200"
              cy="200"
              fill="#1DA1F2"
              r="200"
            />
          </g>
          <g>
            <path
              d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
              fill="#FFFFFF"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ShareBar renders vertically with icons and label 1`] = `
<DocumentFragment>
  .emotion-1 {
  fill: #1877f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-1.emotion-1 {
  width: 48px;
  height: 48px;
}

.emotion-3 {
  fill: #1da1f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-3.emotion-3 {
  width: 48px;
  height: 48px;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-bottom: 16px;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<div
    class="emotion-6"
    orientation="vertical"
  >
    <span
      class="emotion-0"
      orientation="vertical"
    >
      Share
    </span>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="emotion-1"
          fill="currentColor"
          viewBox="0 0 1365.3333 1365.3333"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            transform="matrix(1.3333333,0,0,-1.3333333,0,1365.3333)"
          >
            <g
              transform="scale(0.1)"
            >
              <path
                d="m 10240,5120 c 0,2827.7 -2292.3,5120 -5120,5120 C 2292.3,10240 0,7947.7 0,5120 0,2564.46 1872.31,446.301 4320,62.1992 V 3640 H 3020 v 1480 h 1300 v 1128 c 0,1283.2 764.38,1992 1933.9,1992 560.17,0 1146.1,-100 1146.1,-100 V 6880 H 6754.38 C 6118.35,6880 5920,6485.33 5920,6080.43 V 5120 H 7340 L 7113,3640 H 5920 V 62.1992 C 8367.69,446.301 10240,2564.46 10240,5120"
                fill="#1877f2"
              />
              <path
                d="m 7113,3640 227,1480 H 5920 v 960.43 c 0,404.9 198.35,799.57 834.38,799.57 H 7400 v 1260 c 0,0 -585.93,100 -1146.1,100 C 5084.38,8240 4320,7531.2 4320,6248 V 5120 H 3020 V 3640 H 4320 V 62.1992 C 4580.67,21.3008 4847.84,0 5120,0 c 272.16,0 539.33,21.3008 800,62.1992 V 3640 h 1193"
                fill="#ffffff"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="emotion-3"
          fill="currentColor"
          viewBox="0 0 400 400"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <circle
              cx="200"
              cy="200"
              fill="#1DA1F2"
              r="200"
            />
          </g>
          <g>
            <path
              d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
              fill="#FFFFFF"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ShareBar renders vertically with twitter and facebook icons 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #1877f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-0.emotion-0 {
  width: 48px;
  height: 48px;
}

.emotion-2 {
  fill: #1da1f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-2.emotion-2 {
  width: 48px;
  height: 48px;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
}

<div
    class="emotion-5"
    orientation="vertical"
  >
    <div
      class="emotion-4"
    >
      <div
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          fill="currentColor"
          viewBox="0 0 1365.3333 1365.3333"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            transform="matrix(1.3333333,0,0,-1.3333333,0,1365.3333)"
          >
            <g
              transform="scale(0.1)"
            >
              <path
                d="m 10240,5120 c 0,2827.7 -2292.3,5120 -5120,5120 C 2292.3,10240 0,7947.7 0,5120 0,2564.46 1872.31,446.301 4320,62.1992 V 3640 H 3020 v 1480 h 1300 v 1128 c 0,1283.2 764.38,1992 1933.9,1992 560.17,0 1146.1,-100 1146.1,-100 V 6880 H 6754.38 C 6118.35,6880 5920,6485.33 5920,6080.43 V 5120 H 7340 L 7113,3640 H 5920 V 62.1992 C 8367.69,446.301 10240,2564.46 10240,5120"
                fill="#1877f2"
              />
              <path
                d="m 7113,3640 227,1480 H 5920 v 960.43 c 0,404.9 198.35,799.57 834.38,799.57 H 7400 v 1260 c 0,0 -585.93,100 -1146.1,100 C 5084.38,8240 4320,7531.2 4320,6248 V 5120 H 3020 V 3640 H 4320 V 62.1992 C 4580.67,21.3008 4847.84,0 5120,0 c 272.16,0 539.33,21.3008 800,62.1992 V 3640 h 1193"
                fill="#ffffff"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-2"
          fill="currentColor"
          viewBox="0 0 400 400"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <circle
              cx="200"
              cy="200"
              fill="#1DA1F2"
              r="200"
            />
          </g>
          <g>
            <path
              d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
              fill="#FFFFFF"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ShareBar renders whatever components are passed to it 1`] = `
<DocumentFragment>
  .emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-1 {
  fill: #1877f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-1.emotion-1 {
  width: 48px;
  height: 48px;
}

.emotion-5 {
  fill: #1da1f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-5.emotion-5 {
  width: 48px;
  height: 48px;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-right: 16px;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-3 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
}

.emotion-3 svg {
  fill: #0a68c1;
}

.emotion-3:hover:not(:disabled) {
  color: #02509b;
}

.emotion-3:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-3:active:not(:disabled) {
  color: #01396e;
}

.emotion-3:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-3:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-3:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-3 {
    vertical-align: text-bottom;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-12 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-12 svg {
  width: 24px;
  height: 24px;
}

.emotion-12 svg {
  fill: #ffffff;
}

.emotion-12:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-12:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-12:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-12:disabled svg {
  fill: #c0c0c0;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-9 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<div
    class="emotion-16"
    orientation="horizontal"
  >
    <span
      class="emotion-0"
      orientation="horizontal"
    >
      Share
    </span>
    <div
      class="emotion-15"
    >
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          href="/"
        >
          <span
            class="emotion-2"
          >
            <svg
              aria-hidden="true"
              class="emotion-1"
              fill="currentColor"
              viewBox="0 0 1365.3333 1365.3333"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                transform="matrix(1.3333333,0,0,-1.3333333,0,1365.3333)"
              >
                <g
                  transform="scale(0.1)"
                >
                  <path
                    d="m 10240,5120 c 0,2827.7 -2292.3,5120 -5120,5120 C 2292.3,10240 0,7947.7 0,5120 0,2564.46 1872.31,446.301 4320,62.1992 V 3640 H 3020 v 1480 h 1300 v 1128 c 0,1283.2 764.38,1992 1933.9,1992 560.17,0 1146.1,-100 1146.1,-100 V 6880 H 6754.38 C 6118.35,6880 5920,6485.33 5920,6080.43 V 5120 H 7340 L 7113,3640 H 5920 V 62.1992 C 8367.69,446.301 10240,2564.46 10240,5120"
                    fill="#1877f2"
                  />
                  <path
                    d="m 7113,3640 227,1480 H 5920 v 960.43 c 0,404.9 198.35,799.57 834.38,799.57 H 7400 v 1260 c 0,0 -585.93,100 -1146.1,100 C 5084.38,8240 4320,7531.2 4320,6248 V 5120 H 3020 V 3640 H 4320 V 62.1992 C 4580.67,21.3008 4847.84,0 5120,0 c 272.16,0 539.33,21.3008 800,62.1992 V 3640 h 1193"
                    fill="#ffffff"
                  />
                </g>
              </g>
            </svg>
          </span>
        </a>
      </div>
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          href="/"
        >
          <span
            class="emotion-2"
          >
            <svg
              aria-hidden="true"
              class="emotion-5"
              fill="currentColor"
              viewBox="0 0 400 400"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <circle
                  cx="200"
                  cy="200"
                  fill="#1DA1F2"
                  r="200"
                />
              </g>
              <g>
                <path
                  d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
                  fill="#FFFFFF"
                />
              </g>
            </svg>
          </span>
        </a>
      </div>
      <div
        class="emotion-4"
      >
        <div
          class="emotion-13"
        >
          <button
            class="emotion-12"
            data-testid="button"
            type="button"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-4"
              >
                <span
                  class="emotion-9"
                >
                  more options
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ShareBar renders with custom label stylePreset 1`] = `
<DocumentFragment>
  .emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-1 {
  fill: #1877f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-1.emotion-1 {
  width: 48px;
  height: 48px;
}

.emotion-5 {
  fill: #1da1f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-5.emotion-5 {
  width: 48px;
  height: 48px;
}

.emotion-3 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
}

.emotion-3 svg {
  fill: #0a68c1;
}

.emotion-3:hover:not(:disabled) {
  color: #02509b;
}

.emotion-3:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-3:active:not(:disabled) {
  color: #01396e;
}

.emotion-3:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-3:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-3:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-3 {
    vertical-align: text-bottom;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-12 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-12 svg {
  width: 24px;
  height: 24px;
}

.emotion-12 svg {
  fill: #ffffff;
}

.emotion-12:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-12:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-12:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-12:disabled svg {
  fill: #c0c0c0;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-9 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  margin-right: 16px;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-0 svg {
  fill: #ffffff;
}

.emotion-0:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-0:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-0:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-0:disabled svg {
  fill: #c0c0c0;
}

<div
    class="emotion-16"
    orientation="horizontal"
  >
    <span
      class="emotion-0"
      orientation="horizontal"
    >
      Share
    </span>
    <div
      class="emotion-15"
    >
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          href="/"
        >
          <span
            class="emotion-2"
          >
            <svg
              aria-hidden="true"
              class="emotion-1"
              fill="currentColor"
              viewBox="0 0 1365.3333 1365.3333"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                transform="matrix(1.3333333,0,0,-1.3333333,0,1365.3333)"
              >
                <g
                  transform="scale(0.1)"
                >
                  <path
                    d="m 10240,5120 c 0,2827.7 -2292.3,5120 -5120,5120 C 2292.3,10240 0,7947.7 0,5120 0,2564.46 1872.31,446.301 4320,62.1992 V 3640 H 3020 v 1480 h 1300 v 1128 c 0,1283.2 764.38,1992 1933.9,1992 560.17,0 1146.1,-100 1146.1,-100 V 6880 H 6754.38 C 6118.35,6880 5920,6485.33 5920,6080.43 V 5120 H 7340 L 7113,3640 H 5920 V 62.1992 C 8367.69,446.301 10240,2564.46 10240,5120"
                    fill="#1877f2"
                  />
                  <path
                    d="m 7113,3640 227,1480 H 5920 v 960.43 c 0,404.9 198.35,799.57 834.38,799.57 H 7400 v 1260 c 0,0 -585.93,100 -1146.1,100 C 5084.38,8240 4320,7531.2 4320,6248 V 5120 H 3020 V 3640 H 4320 V 62.1992 C 4580.67,21.3008 4847.84,0 5120,0 c 272.16,0 539.33,21.3008 800,62.1992 V 3640 h 1193"
                    fill="#ffffff"
                  />
                </g>
              </g>
            </svg>
          </span>
        </a>
      </div>
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          href="/"
        >
          <span
            class="emotion-2"
          >
            <svg
              aria-hidden="true"
              class="emotion-5"
              fill="currentColor"
              viewBox="0 0 400 400"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <circle
                  cx="200"
                  cy="200"
                  fill="#1DA1F2"
                  r="200"
                />
              </g>
              <g>
                <path
                  d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
                  fill="#FFFFFF"
                />
              </g>
            </svg>
          </span>
        </a>
      </div>
      <div
        class="emotion-4"
      >
        <div
          class="emotion-13"
        >
          <button
            class="emotion-12"
            data-testid="button"
            type="button"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-4"
              >
                <span
                  class="emotion-9"
                >
                  more options
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ShareBar renders with custom stack spacing 1`] = `
<DocumentFragment>
  .emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-1 {
  fill: #1877f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-1.emotion-1 {
  width: 48px;
  height: 48px;
}

.emotion-5 {
  fill: #1da1f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-5.emotion-5 {
  width: 48px;
  height: 48px;
}

.emotion-3 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
}

.emotion-3 svg {
  fill: #0a68c1;
}

.emotion-3:hover:not(:disabled) {
  color: #02509b;
}

.emotion-3:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-3:active:not(:disabled) {
  color: #01396e;
}

.emotion-3:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-3:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-3:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-3 {
    vertical-align: text-bottom;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-12 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-12 svg {
  width: 24px;
  height: 24px;
}

.emotion-12 svg {
  fill: #ffffff;
}

.emotion-12:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-12:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-12:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-12:disabled svg {
  fill: #c0c0c0;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-9 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-right: 12px;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<div
    class="emotion-16"
    orientation="horizontal"
  >
    <span
      class="emotion-0"
      orientation="horizontal"
    >
      Share
    </span>
    <div
      class="emotion-15"
    >
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          href="/"
        >
          <span
            class="emotion-2"
          >
            <svg
              aria-hidden="true"
              class="emotion-1"
              fill="currentColor"
              viewBox="0 0 1365.3333 1365.3333"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                transform="matrix(1.3333333,0,0,-1.3333333,0,1365.3333)"
              >
                <g
                  transform="scale(0.1)"
                >
                  <path
                    d="m 10240,5120 c 0,2827.7 -2292.3,5120 -5120,5120 C 2292.3,10240 0,7947.7 0,5120 0,2564.46 1872.31,446.301 4320,62.1992 V 3640 H 3020 v 1480 h 1300 v 1128 c 0,1283.2 764.38,1992 1933.9,1992 560.17,0 1146.1,-100 1146.1,-100 V 6880 H 6754.38 C 6118.35,6880 5920,6485.33 5920,6080.43 V 5120 H 7340 L 7113,3640 H 5920 V 62.1992 C 8367.69,446.301 10240,2564.46 10240,5120"
                    fill="#1877f2"
                  />
                  <path
                    d="m 7113,3640 227,1480 H 5920 v 960.43 c 0,404.9 198.35,799.57 834.38,799.57 H 7400 v 1260 c 0,0 -585.93,100 -1146.1,100 C 5084.38,8240 4320,7531.2 4320,6248 V 5120 H 3020 V 3640 H 4320 V 62.1992 C 4580.67,21.3008 4847.84,0 5120,0 c 272.16,0 539.33,21.3008 800,62.1992 V 3640 h 1193"
                    fill="#ffffff"
                  />
                </g>
              </g>
            </svg>
          </span>
        </a>
      </div>
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          href="/"
        >
          <span
            class="emotion-2"
          >
            <svg
              aria-hidden="true"
              class="emotion-5"
              fill="currentColor"
              viewBox="0 0 400 400"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <circle
                  cx="200"
                  cy="200"
                  fill="#1DA1F2"
                  r="200"
                />
              </g>
              <g>
                <path
                  d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
                  fill="#FFFFFF"
                />
              </g>
            </svg>
          </span>
        </a>
      </div>
      <div
        class="emotion-4"
      >
        <div
          class="emotion-13"
        >
          <button
            class="emotion-12"
            data-testid="button"
            type="button"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-4"
              >
                <span
                  class="emotion-9"
                >
                  more options
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ShareBar renders with horizontally with overrides for label spacing 1`] = `
<DocumentFragment>
  .emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-1 {
  fill: #1877f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-1.emotion-1 {
  width: 48px;
  height: 48px;
}

.emotion-5 {
  fill: #1da1f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-5.emotion-5 {
  width: 48px;
  height: 48px;
}

.emotion-3 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
}

.emotion-3 svg {
  fill: #0a68c1;
}

.emotion-3:hover:not(:disabled) {
  color: #02509b;
}

.emotion-3:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-3:active:not(:disabled) {
  color: #01396e;
}

.emotion-3:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-3:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-3:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-3 {
    vertical-align: text-bottom;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-12 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-12 svg {
  width: 24px;
  height: 24px;
}

.emotion-12 svg {
  fill: #ffffff;
}

.emotion-12:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-12:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-12:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-12:disabled svg {
  fill: #c0c0c0;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-9 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-right: 12px;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<div
    class="emotion-16"
    orientation="horizontal"
  >
    <span
      class="emotion-0"
      orientation="horizontal"
    >
      Share
    </span>
    <div
      class="emotion-15"
    >
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          href="/"
        >
          <span
            class="emotion-2"
          >
            <svg
              aria-hidden="true"
              class="emotion-1"
              fill="currentColor"
              viewBox="0 0 1365.3333 1365.3333"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                transform="matrix(1.3333333,0,0,-1.3333333,0,1365.3333)"
              >
                <g
                  transform="scale(0.1)"
                >
                  <path
                    d="m 10240,5120 c 0,2827.7 -2292.3,5120 -5120,5120 C 2292.3,10240 0,7947.7 0,5120 0,2564.46 1872.31,446.301 4320,62.1992 V 3640 H 3020 v 1480 h 1300 v 1128 c 0,1283.2 764.38,1992 1933.9,1992 560.17,0 1146.1,-100 1146.1,-100 V 6880 H 6754.38 C 6118.35,6880 5920,6485.33 5920,6080.43 V 5120 H 7340 L 7113,3640 H 5920 V 62.1992 C 8367.69,446.301 10240,2564.46 10240,5120"
                    fill="#1877f2"
                  />
                  <path
                    d="m 7113,3640 227,1480 H 5920 v 960.43 c 0,404.9 198.35,799.57 834.38,799.57 H 7400 v 1260 c 0,0 -585.93,100 -1146.1,100 C 5084.38,8240 4320,7531.2 4320,6248 V 5120 H 3020 V 3640 H 4320 V 62.1992 C 4580.67,21.3008 4847.84,0 5120,0 c 272.16,0 539.33,21.3008 800,62.1992 V 3640 h 1193"
                    fill="#ffffff"
                  />
                </g>
              </g>
            </svg>
          </span>
        </a>
      </div>
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          href="/"
        >
          <span
            class="emotion-2"
          >
            <svg
              aria-hidden="true"
              class="emotion-5"
              fill="currentColor"
              viewBox="0 0 400 400"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <circle
                  cx="200"
                  cy="200"
                  fill="#1DA1F2"
                  r="200"
                />
              </g>
              <g>
                <path
                  d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
                  fill="#FFFFFF"
                />
              </g>
            </svg>
          </span>
        </a>
      </div>
      <div
        class="emotion-4"
      >
        <div
          class="emotion-13"
        >
          <button
            class="emotion-12"
            data-testid="button"
            type="button"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-4"
              >
                <span
                  class="emotion-9"
                >
                  more options
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ShareBar renders with no icons and labels 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

<div
    class="emotion-1"
    orientation="horizontal"
  >
    <div
      class="emotion-0"
    />
  </div>
</DocumentFragment>
`;

exports[`ShareBar renders with overrides for item spacing 1`] = `
<DocumentFragment>
  .emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-1 {
  fill: #1877f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-1.emotion-1 {
  width: 48px;
  height: 48px;
}

.emotion-5 {
  fill: #1da1f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-5.emotion-5 {
  width: 48px;
  height: 48px;
}

.emotion-16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-bottom: 16px;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-3 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
}

.emotion-3 svg {
  fill: #0a68c1;
}

.emotion-3:hover:not(:disabled) {
  color: #02509b;
}

.emotion-3:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-3:active:not(:disabled) {
  color: #01396e;
}

.emotion-3:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-3:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-3:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-3 {
    vertical-align: text-bottom;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-12 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-12 svg {
  width: 24px;
  height: 24px;
}

.emotion-12 svg {
  fill: #ffffff;
}

.emotion-12:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-12:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-12:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-12:disabled svg {
  fill: #c0c0c0;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-9 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-32px/2);
  margin-bottom: calc(-32px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(32px/2);
  margin-bottom: calc(32px/2);
}

<div
    class="emotion-16"
    orientation="vertical"
  >
    <span
      class="emotion-0"
      orientation="vertical"
    >
      Share
    </span>
    <div
      class="emotion-15"
    >
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          href="/"
        >
          <span
            class="emotion-2"
          >
            <svg
              aria-hidden="true"
              class="emotion-1"
              fill="currentColor"
              viewBox="0 0 1365.3333 1365.3333"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                transform="matrix(1.3333333,0,0,-1.3333333,0,1365.3333)"
              >
                <g
                  transform="scale(0.1)"
                >
                  <path
                    d="m 10240,5120 c 0,2827.7 -2292.3,5120 -5120,5120 C 2292.3,10240 0,7947.7 0,5120 0,2564.46 1872.31,446.301 4320,62.1992 V 3640 H 3020 v 1480 h 1300 v 1128 c 0,1283.2 764.38,1992 1933.9,1992 560.17,0 1146.1,-100 1146.1,-100 V 6880 H 6754.38 C 6118.35,6880 5920,6485.33 5920,6080.43 V 5120 H 7340 L 7113,3640 H 5920 V 62.1992 C 8367.69,446.301 10240,2564.46 10240,5120"
                    fill="#1877f2"
                  />
                  <path
                    d="m 7113,3640 227,1480 H 5920 v 960.43 c 0,404.9 198.35,799.57 834.38,799.57 H 7400 v 1260 c 0,0 -585.93,100 -1146.1,100 C 5084.38,8240 4320,7531.2 4320,6248 V 5120 H 3020 V 3640 H 4320 V 62.1992 C 4580.67,21.3008 4847.84,0 5120,0 c 272.16,0 539.33,21.3008 800,62.1992 V 3640 h 1193"
                    fill="#ffffff"
                  />
                </g>
              </g>
            </svg>
          </span>
        </a>
      </div>
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          href="/"
        >
          <span
            class="emotion-2"
          >
            <svg
              aria-hidden="true"
              class="emotion-5"
              fill="currentColor"
              viewBox="0 0 400 400"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <circle
                  cx="200"
                  cy="200"
                  fill="#1DA1F2"
                  r="200"
                />
              </g>
              <g>
                <path
                  d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
                  fill="#FFFFFF"
                />
              </g>
            </svg>
          </span>
        </a>
      </div>
      <div
        class="emotion-4"
      >
        <div
          class="emotion-13"
        >
          <button
            class="emotion-12"
            data-testid="button"
            type="button"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-10"
              >
                <span
                  class="emotion-9"
                >
                  more options
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ShareBar renders with overrides for label typographyPreset 1`] = `
<DocumentFragment>
  .emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-1 {
  fill: #1877f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-1.emotion-1 {
  width: 48px;
  height: 48px;
}

.emotion-5 {
  fill: #1da1f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-5.emotion-5 {
  width: 48px;
  height: 48px;
}

.emotion-16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
}

.emotion-3 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
}

.emotion-3 svg {
  fill: #0a68c1;
}

.emotion-3:hover:not(:disabled) {
  color: #02509b;
}

.emotion-3:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-3:active:not(:disabled) {
  color: #01396e;
}

.emotion-3:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-3:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-3:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-3 {
    vertical-align: text-bottom;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-12 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-12 svg {
  width: 24px;
  height: 24px;
}

.emotion-12 svg {
  fill: #ffffff;
}

.emotion-12:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-12:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-12:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-12:disabled svg {
  fill: #c0c0c0;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-9 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-bottom: 16px;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

<div
    class="emotion-16"
    orientation="vertical"
  >
    <span
      class="emotion-0"
      orientation="vertical"
    >
      Share
    </span>
    <div
      class="emotion-15"
    >
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          href="/"
        >
          <span
            class="emotion-2"
          >
            <svg
              aria-hidden="true"
              class="emotion-1"
              fill="currentColor"
              viewBox="0 0 1365.3333 1365.3333"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                transform="matrix(1.3333333,0,0,-1.3333333,0,1365.3333)"
              >
                <g
                  transform="scale(0.1)"
                >
                  <path
                    d="m 10240,5120 c 0,2827.7 -2292.3,5120 -5120,5120 C 2292.3,10240 0,7947.7 0,5120 0,2564.46 1872.31,446.301 4320,62.1992 V 3640 H 3020 v 1480 h 1300 v 1128 c 0,1283.2 764.38,1992 1933.9,1992 560.17,0 1146.1,-100 1146.1,-100 V 6880 H 6754.38 C 6118.35,6880 5920,6485.33 5920,6080.43 V 5120 H 7340 L 7113,3640 H 5920 V 62.1992 C 8367.69,446.301 10240,2564.46 10240,5120"
                    fill="#1877f2"
                  />
                  <path
                    d="m 7113,3640 227,1480 H 5920 v 960.43 c 0,404.9 198.35,799.57 834.38,799.57 H 7400 v 1260 c 0,0 -585.93,100 -1146.1,100 C 5084.38,8240 4320,7531.2 4320,6248 V 5120 H 3020 V 3640 H 4320 V 62.1992 C 4580.67,21.3008 4847.84,0 5120,0 c 272.16,0 539.33,21.3008 800,62.1992 V 3640 h 1193"
                    fill="#ffffff"
                  />
                </g>
              </g>
            </svg>
          </span>
        </a>
      </div>
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          href="/"
        >
          <span
            class="emotion-2"
          >
            <svg
              aria-hidden="true"
              class="emotion-5"
              fill="currentColor"
              viewBox="0 0 400 400"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <circle
                  cx="200"
                  cy="200"
                  fill="#1DA1F2"
                  r="200"
                />
              </g>
              <g>
                <path
                  d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
                  fill="#FFFFFF"
                />
              </g>
            </svg>
          </span>
        </a>
      </div>
      <div
        class="emotion-4"
      >
        <div
          class="emotion-13"
        >
          <button
            class="emotion-12"
            data-testid="button"
            type="button"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-10"
              >
                <span
                  class="emotion-9"
                >
                  more options
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ShareBar renders with vertically with overrides for label spacing 1`] = `
<DocumentFragment>
  .emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-1 {
  fill: #1877f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-1.emotion-1 {
  width: 48px;
  height: 48px;
}

.emotion-5 {
  fill: #1da1f2;
  vertical-align: unset;
  display: inline-block;
}

.emotion-5.emotion-5 {
  width: 48px;
  height: 48px;
}

.emotion-16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
}

.emotion-3 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
}

.emotion-3 svg {
  fill: #0a68c1;
}

.emotion-3:hover:not(:disabled) {
  color: #02509b;
}

.emotion-3:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-3:active:not(:disabled) {
  color: #01396e;
}

.emotion-3:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-3:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-3:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-3 {
    vertical-align: text-bottom;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-12 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-12 svg {
  width: 24px;
  height: 24px;
}

.emotion-12 svg {
  fill: #ffffff;
}

.emotion-12:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-12:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-12:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-12:disabled svg {
  fill: #c0c0c0;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-9 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-bottom: 12px;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<div
    class="emotion-16"
    orientation="vertical"
  >
    <span
      class="emotion-0"
      orientation="vertical"
    >
      Share
    </span>
    <div
      class="emotion-15"
    >
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          href="/"
        >
          <span
            class="emotion-2"
          >
            <svg
              aria-hidden="true"
              class="emotion-1"
              fill="currentColor"
              viewBox="0 0 1365.3333 1365.3333"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                transform="matrix(1.3333333,0,0,-1.3333333,0,1365.3333)"
              >
                <g
                  transform="scale(0.1)"
                >
                  <path
                    d="m 10240,5120 c 0,2827.7 -2292.3,5120 -5120,5120 C 2292.3,10240 0,7947.7 0,5120 0,2564.46 1872.31,446.301 4320,62.1992 V 3640 H 3020 v 1480 h 1300 v 1128 c 0,1283.2 764.38,1992 1933.9,1992 560.17,0 1146.1,-100 1146.1,-100 V 6880 H 6754.38 C 6118.35,6880 5920,6485.33 5920,6080.43 V 5120 H 7340 L 7113,3640 H 5920 V 62.1992 C 8367.69,446.301 10240,2564.46 10240,5120"
                    fill="#1877f2"
                  />
                  <path
                    d="m 7113,3640 227,1480 H 5920 v 960.43 c 0,404.9 198.35,799.57 834.38,799.57 H 7400 v 1260 c 0,0 -585.93,100 -1146.1,100 C 5084.38,8240 4320,7531.2 4320,6248 V 5120 H 3020 V 3640 H 4320 V 62.1992 C 4580.67,21.3008 4847.84,0 5120,0 c 272.16,0 539.33,21.3008 800,62.1992 V 3640 h 1193"
                    fill="#ffffff"
                  />
                </g>
              </g>
            </svg>
          </span>
        </a>
      </div>
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          href="/"
        >
          <span
            class="emotion-2"
          >
            <svg
              aria-hidden="true"
              class="emotion-5"
              fill="currentColor"
              viewBox="0 0 400 400"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <circle
                  cx="200"
                  cy="200"
                  fill="#1DA1F2"
                  r="200"
                />
              </g>
              <g>
                <path
                  d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25
		c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2
		c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2
		c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7
		c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7
		C110.8,297.5,136.2,305.5,163.4,305.5"
                  fill="#FFFFFF"
                />
              </g>
            </svg>
          </span>
        </a>
      </div>
      <div
        class="emotion-4"
      >
        <div
          class="emotion-13"
        >
          <button
            class="emotion-12"
            data-testid="button"
            type="button"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-10"
              >
                <span
                  class="emotion-9"
                >
                  more options
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
